# Spectral

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.bat  build.sh
app/: CMakeLists.txt
examples/: CMakeLists.txt
examples/window_ex/: main.c
include/: actions.h  d_array.h  data.h  display.h  err_data.h  interface.h  interface_errors.h  raw.h  render.h  renderer.h  result.h  shaders.h  test.h  windower.h
include/Spectral/: result.h  spectral.h
lib/: CMakeLists.txt
pkgs/: glad_gl=3.3.tar  glad_gl=4.5.tar  glad_gl=4.6.tar
scripts/cmake/: GetRemote.cmake  compile_tools.cmake  remotes.cmake
shaders/: fragment.glsl
src/: actions.c  d_array.c  data.c  dimension.c  display.c  interface.c  main.c  raw.c  render.c  renderer.c  result.c  shaders.c  spectral.c  test.c  windower.c
src/internal/: d_array.c  dimension.c  renderer.c  result.c  windower.c
src/internal/include/: colors.h  dimension.h  renderer.h  shader_tools.h  windower.h
src/shaders/: vertex.glsl
tasks/: extract_bytes.c  extract_literals.c
tests/: CMakeLists.txt  demo_tests.c  example.c  test_main.c
tests/include/: example.h
tools/: extract_literals.c
